kubernetes/apps/base/external-services/dockhand/external/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: dockhand
  labels:
    kubernetes.io/service-name: dockhand
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.54.2
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 3000
    protocol: TCP
    appProtocol: http
