kubernetes/apps/base/external-services/dockhand/external/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dockhand
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
      appProtocol: http
  clusterIP: None
