kubernetes/apps/base/external-services/dockhand/external/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app dockhand
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - dockhand.example.com
  rules:
    - backendRefs:
        - name: *app
          namespace: external-services
          port: 3000
